bug fixes for responsive behavior on mobile and tablet following index.html styling changes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,10 +19,6 @@ body {
         background-color: #e3d888;
 }
 
-.color-row {
-    background-color: #e3d888;
-}
-
 /******************Navbar***/
 
 .navbar i {
@@ -95,8 +91,8 @@ h3 {
         font-size: 120%;
         text-align: center;
         font-weight: 200;
-        margin-top: 15px;
-        margin-bottom: 15px;
+        margin-top: 10px;
+        margin-bottom: 10px;
 }
 
 p {
@@ -134,7 +130,7 @@ p {
 .large-image-top {
         margin-top: 10px;
         margin-bottom: 0px;
-}
+ }
 
 .large-image-top img {
         max-width: 90%;
@@ -150,7 +146,6 @@ p {
 }
 
 #play-schedule {
-    max-width: 50%;
     margin: 0 auto;
     color: #5c95ff;
     font-weight: bold;
@@ -168,11 +163,6 @@ p {
 p {
     text-align: center;
 }
-
-/***.text-section {
-        margin: auto;
-        height: 250px;
-}***/
 
 .text-section p {
         text-align: left;
@@ -205,6 +195,8 @@ p {
         margin: 0 auto;
         margin-top: 10px;
         margin-bottom: 10px;
+        max-width: 100%;
+        max-height: 100%;
 }
 
 /******************Contact button***/
@@ -298,6 +290,15 @@ form {
 
 /********************Media queries***/
 
+/***min-width inline with Bootstrap tabelt screen measurements***/
+
+@media only screen and (min-width: 768px) {
+    .netball-graphic img {
+        height: 100px;
+        width: 100px;
+        margin-top: 5px;
+        margin-bottom: 5px;
+    }
 
 /***min-width inline with Bootstrap large screen measurements***/
 
@@ -319,6 +320,9 @@ form {
             font-size: 120%;
             margin-bottom: 80px;
     }
+    .color-row {
+        background-color: #e3d888;
+    }    
     .large-image-top {
             max-height: 350px;
     }  
@@ -360,6 +364,9 @@ form {
     .color-row {
         height: 300px;
     }
+    #play-schedule {
+            max-width: 50%;
+    }    
     .netball-graphic img {
             height: 250px;
             width: 250px;
